--- a/src-React/package.json
+++ b/src-React/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-webcam": "^7.1.1"
   }
 }
